# app/Models/Booking.php
@@ -5,6 +5,43 @@ namespace App\Models;
 use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Database\Eloquent\Model;
 
+/**
+ * @OA\Schema(
+ *     title="Booking",
+ *     description="Booking model",
+ *     @OA\Property(
+ *         property="id",
+ *         type="integer(20)",
+ *         description="ID",
+ *         example="1"
+ *     ),
+ *     @OA\Property(
+ *         property="member_id",
+ *         type="integer(20)",
+ *         description="member_id",
+ *         example="1"
+ *     ),
+ *     @OA\Property(
+ *         property="court_id",
+ *         type="integer(20)",
+ *         description="court_id",
+ *         example="1"
+ *     ),
+ *     @OA\Property(
+ *         property="date",
+ *         type="integer(20)",
+ *         description="date",
+ *         example="2023-02-23"
+ *     ),
+ *     @OA\Property(
+ *         property="hour_reserve_id",
+ *         type="integer(20)",
+ *         description="hour_reserve_id",
+ *         example="1"
+ *     )
+ * )
+ */
+
 class Booking extends Model
 {
     use HasFactory;
