# routes/api.php
@@ -2,7 +2,9 @@
 
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
+use App\Http\Controllers\Api\AuthController;
 use App\Http\Controllers\Api\SportController;
+
 /*
 |--------------------------------------------------------------------------
 | API Routes
@@ -18,7 +20,10 @@ Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
     return $request->user();
 });
 
+Route::post('/register', [AuthController::class, 'register']);
+Route::post('/login', [AuthController::class, 'login']);
+
 Route::get('/sports', [SportController::class, 'index']);
 Route::post('/sports', [SportController::class, 'store']);
-Route::put('/sports/{id}', [SportController::class, 'update']);
+Route::put('/sports', [SportController::class, 'update']);
 Route::delete('/sports/{id}', [SportController::class, 'destroy']);
